--- a/data-science.html
+++ b/data-science.html
@@ -65,7 +65,7 @@
 <p><span class="badge badge-light">Greeley, CO, USA</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/fanatics/878230c6-07c0-433c-9f42-9590602874a4'>Fanatics - Senior Data Scientist</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/fanatics/878230c6-07c0-433c-9f42-9590602874a4'>Fanatics - Senior Data Scientist</a></h5> 
 <p><span class="badge badge-light">Seattle</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -73,7 +73,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/fanatics/d793f15b-7530-4859-91a6-541fbfe13f0f'>Fanatics - Lead Data Scientist - Demand Forecasting / Supply Chain Science</a></h5> 
+<h5><a href='https://jobs.lever.co/fanatics/d793f15b-7530-4859-91a6-541fbfe13f0f'>Fanatics - Lead Data Scientist - Demand Forecasting / Supply Chain Science</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -222,7 +222,7 @@ have?...</p>
 <p><span class="badge badge-light">Toronto, Ontario, Canada Toronto</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://smartnews.workable.com/j/37270B89CA'>SmartNews, Inc. - Jobs: Data Science Manager - Apply online</a></h5> 
+<h5><a href='https://smartnews.workable.com/j/37270B89CA'>SmartNews, Inc. - Jobs: Data Science Manager - Apply online</a></h5> 
 <p><span class="badge badge-light">Tokyo, Japan Tokyo</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -234,7 +234,7 @@ have?...</p>
 <p><span class="badge badge-light">Provo, UT</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/northbridge/job/odhlafwJ'>Northbridge Financial Corporation Careers - Associate Data Scientist</a></h5> 
+<h5><a href='http://jobs.jobvite.com/northbridge/job/odhlafwJ'>Northbridge Financial Corporation Careers - Associate Data Scientist</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -310,7 +310,7 @@ you to adverse treatment). Tubular Labs is a Government contractor subject to?..
 <p>3 days ago ... Job Summary: The Splunk Data Analytics and Business Intelligence Data 
 Scientist ? Assistant Director drives forward the Business Value Creation...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://friss.recruitee.com/o/fight-fraud-as-a-data-scientist'>
+<h5><a href='https://friss.recruitee.com/o/fight-fraud-as-a-data-scientist'>
       FIGHT FRAUD! As a Data Scientist - FRISS | fraud, risk & compliance
     </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -328,7 +328,7 @@ Scientist ? Assistant Director drives forward the Business Value Creation...</p>
 <p><span class="badge badge-light"></span></p>
 <p>3 days ago ... Apply online for the job of Fraud Junior Data Scientist at The Hut Group.</p>
 <hr/>
-<h5><a href='https://crisistextline.workable.com/j/E04B7C7AEE?viewed=true'>Data Scientist, Behavioral Science Specialist ... - Crisis Text Line - Jobs</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://crisistextline.workable.com/j/E04B7C7AEE?viewed=true'>Data Scientist, Behavioral Science Specialist ... - Crisis Text Line - Jobs</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 17, 2019 ... Crisis Text Line is looking for a Data Scientist with experience in Behavioral 
 Science (?Behavioral Data Scientist?) to support our three core operational?...</p>
@@ -401,7 +401,7 @@ Science (?Behavioral Data Scientist?) to support our three core operational?...<
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-05</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://medlanes.join.com/jobs/262494-data-scientist-digital-health-startup-m-f'>Job @ Medlanes (Berlin): Data Scientist - Digital ... | JOIN</a></h5> 
+<h5><a href='https://medlanes.join.com/jobs/262494-data-scientist-digital-health-startup-m-f'>Job @ Medlanes (Berlin): Data Scientist - Digital ... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-05</p>
 <hr/>
@@ -423,13 +423,13 @@ your application. LinkedIn profile. Loading. Apply with Linkedin. Profile added.
 <p>Jul 16, 2019 ... We are looking for a Data Scientist to develop a revenue generating, predictive, 
 intelligent, learning algorithm. The algorithm will ingest market analytics and?...</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/shopify/745a1f2e-5d05-4596-a16f-fb31df6c9f53/apply'>Shopify - Senior Data Scientist (multiple roles)</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/shopify/745a1f2e-5d05-4596-a16f-fb31df6c9f53/apply'>Shopify - Senior Data Scientist (multiple roles)</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>6 days ago ... Senior Data Scientist (multiple roles). Ottawa, Canada. R&D ? Data Science & 
 Engineering. full-time. Submit your application. Resume/CV. ATTACH RESUME/
 ?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/perpetualabs.com/e3c1df80-de35-4f78-8ae7-2dd3f6ea79be/apply'>Perpetua Labs - Data Scientist, Product - Toronto</a></h5> 
+<h5><a href='https://jobs.lever.co/perpetualabs.com/e3c1df80-de35-4f78-8ae7-2dd3f6ea79be/apply'>Perpetua Labs - Data Scientist, Product - Toronto</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 16, 2019 ... Data Scientist, Product - Toronto. Toronto. Product. Full-time. Submit your 
 application. Resume/CV. ATTACH RESUME/CV. Couldn't auto-read resume.</p>
